# platforms_contrib

./: .bazelrc  .gitignore  MODULE.bazel
.bcr/: metadata.template.json
.github/scripts/: update_detector_index.py  update_detector_versions.py
.github/workflows/: ci.yaml  prebuilt-detector.yml  publish.yaml  release.yaml  release_prep.sh
cpu/arm64/: BUILD.bazel
cpu/ppc64le/: BUILD.bazel
cpu/x86_64/: BUILD.bazel  x86_64.bzl  x86_64_private.bzl
cpu/x86_64/avx/: BUILD.bazel
cpu/x86_64/avx2/: BUILD.bazel
cpu/x86_64/avx512dq/: BUILD.bazel
cpu/x86_64/avx512f/: BUILD.bazel
cpu/x86_64/avx512vl/: BUILD.bazel
cpu/x86_64/bmi1/: BUILD.bazel
cpu/x86_64/bmi2/: BUILD.bazel
cpu/x86_64/feature/: BUILD.bazel  feature.bzl
cpu/x86_64/feature/avx512bw/: BUILD.bazel
cpu/x86_64/feature/avx512cd/: BUILD.bazel
cpu/x86_64/feature/cmov/: BUILD.bazel
cpu/x86_64/feature/cmpxchg16b/: BUILD.bazel
cpu/x86_64/feature/cx8/: BUILD.bazel
cpu/x86_64/feature/f16c/: BUILD.bazel
cpu/x86_64/feature/fpu/: BUILD.bazel
cpu/x86_64/feature/fxsr/: BUILD.bazel
cpu/x86_64/feature/lahf_sahf/: BUILD.bazel
cpu/x86_64/feature/mmx/: BUILD.bazel
cpu/x86_64/feature/osfxsr/: BUILD.bazel
cpu/x86_64/feature/osxsave/: BUILD.bazel
cpu/x86_64/feature/popcnt/: BUILD.bazel
cpu/x86_64/feature/sce/: BUILD.bazel
cpu/x86_64/feature/sse4_1/: BUILD.bazel
cpu/x86_64/feature/sse4_2/: BUILD.bazel
cpu/x86_64/fma/: BUILD.bazel
cpu/x86_64/lzcnt/: BUILD.bazel
cpu/x86_64/movbe/: BUILD.bazel
cpu/x86_64/sse/: BUILD.bazel
cpu/x86_64/sse2/: BUILD.bazel
cpu/x86_64/sse3/: BUILD.bazel
cpu/x86_64/ssse3/: BUILD.bazel
defs/: enhanced_constraint_setting.bzl  validate_platforms_aspect.bzl
examples/: BUILD.bazel  MODULE.bazel
examples/libc/: BUILD.bazel  cfg_variants.bzl  expected_output_srcs.txt  expected_output_tools.txt  foo_binary_variants.bzl
examples/libc_runtime/: BUILD.bazel  foo_binary_variants.bzl
examples/rules/foo/: defs.bzl
examples/x86_64/: BUILD.bazel  cfg_variants.bzl  expected_output_level.txt  expected_output_srcs.txt
go/constraints/386/: BUILD.bazel
go/constraints/amd64/: BUILD.bazel
go/constraints/arm/: BUILD.bazel
go/constraints/arm64/: BUILD.bazel
go/constraints/mips/: BUILD.bazel
go/constraints/mips64/: BUILD.bazel
go/constraints/ppc64/: BUILD.bazel
go/constraints/riscv64/: BUILD.bazel
go/constraints/wasm/: BUILD.bazel
host/: BUILD.bazel
libc/: BUILD.bazel
libc/glibc/: BUILD.bazel
os/linux/libc/glibc/: BUILD.bazel  glibc.bzl  glibc_private.bzl
os/linux/libc/musl/: BUILD.bazel  musl.bzl  musl_private.bzl
os/linux/libc_runtime/glibc/: BUILD.bazel
os/linux/libc_runtime/musl/: BUILD.bazel
private/: compat_constraint_setting.bzl  extensions.bzl  host_detect.bzl  ordered_range_constraint_values.bzl
private/detector/: BUILD.bazel  prebuilts.json  versions.bzl
private/detector/src/: detector.c
