constraint_setting(
    name = "libc",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "glibc",
    constraint_setting = ":libc",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "msvcrt",
    constraint_setting = ":libc",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "musl",
    constraint_setting = ":libc",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "ucrt",
    constraint_setting = ":libc",
    visibility = ["//visibility:public"],
)
