load("//private:ordered_range_constraint_values.bzl", "ordered_range_constraint_values")

# Platforms must only specify a value for this setting if they also specify the
# @platforms//cpu:arm64 constraint value. This will be enforced by future
# versions of Bazel.
constraint_setting(
    name = "microarchitecture_level",
    default_constraint_value = ":v8_0",
    visibility = ["//visibility:public"],
)

MICROARCHITECTURE_LEVELS = [
    "v8_" + str(i)
    for i in range(0, 10)
]

ordered_range_constraint_values(
    constraint_setting = ":microarchitecture_level",
    values = MICROARCHITECTURE_LEVELS,
    visibility = ["//visibility:public"],
)

# Mapping of CPU features to the lowest Armv8-A architecture revision that
# makes them mandatory.
_HAS_FEATURES = {
    # v8.0-A baseline: NEON (Advanced SIMD) and FP16 data type are mandatory.
    "neon": "v8_0",
    "fp16": "v8_0",
    # FEAT_FP16 (half-precision floating-point arithmetic) is mandatory from
    # Armv8.2-A.
    "neon_fp16": "v8_2",
    # FEAT_DotProd is optional in Armv8.2-A and mandatory from Armv8.4-A.
    "neon_dotprod": "v8_4",
    # FEAT_BF16 is mandatory from Armv8.6-A.
    "neon_bf16": "v8_6",
}

[
    alias(
        name = "has_" + feature,
        actual = ":at_least_" + level,
        visibility = ["//visibility:public"],
    )
    for feature, level in _HAS_FEATURES.items()
]
