load("//private:ordered_range_constraint_values.bzl", "ordered_range_constraint_values")

# Platforms must only specify a value for this setting if they also specify the
# @platforms//cpu:ppc64le constraint value. This will be enforced by future
# versions of Bazel.
constraint_setting(
    name = "microarchitecture_level",
    default_constraint_value = ":power8",
    visibility = ["//visibility:public"],
)

# ppc64le was introduced with POWER8 (Power ISA 2.07), so POWER8 is the lowest
# level applicable to this CPU.
MICROARCHITECTURE_LEVELS = [
    "power8",
    "power9",
    "power10",
]

ordered_range_constraint_values(
    constraint_setting = ":microarchitecture_level",
    values = MICROARCHITECTURE_LEVELS,
    visibility = ["//visibility:public"],
)

# Mapping of CPU features to the lowest POWER level that guarantees their
# presence.
_HAS_FEATURES = {
    # VSX is mandatory from POWER7 (Power ISA 2.06) onwards, and ppc64le starts
    # at POWER8.
    "vsx": "power8",
    # VSX-3 was introduced with POWER9 (Power ISA 3.0).
    "vsx3": "power9",
}

[
    alias(
        name = "has_" + feature,
        actual = ":at_least_" + level,
        visibility = ["//visibility:public"],
    )
    for feature, level in _HAS_FEATURES.items()
]
