load("//private:ordered_range_constraint_values.bzl", "ordered_range_constraint_values")

MICROARCHITECTURE_LEVELS = [
    "v" + str(i)
    for i in range(1, 5)
]

# Platforms must only specify a value for this setting if they also specify the
# @platforms//cpu:x86_64 constraint value. This will be enforced by future
# versions of Bazel.
constraint_setting(
    name = "microarchitecture_level",
    default_constraint_value = MICROARCHITECTURE_LEVELS[0],
    visibility = ["//visibility:public"],
)

ordered_range_constraint_values(
    constraint_setting = ":microarchitecture_level",
    values = MICROARCHITECTURE_LEVELS,
    visibility = ["//visibility:public"],
)

# Mapping of CPU features to the lowest microarchitecture level that guarantees
# their presence. See https://en.wikipedia.org/wiki/X86-64#Microarchitecture_levels
# for the full feature lists per level.
_HAS_FEATURES = {
    # v1 (baseline x86-64)
    "sse": "v1",
    "sse2": "v1",
    # v2
    "sse3": "v2",
    "ssse3": "v2",
    "sse4_1": "v2",
    "popcnt": "v2",
    "sse4_2": "v2",
    # v3
    "avx": "v3",
    "fp16": "v3",
    "fma3": "v3",
    "avx2": "v3",
    # v4
    "avx_512f": "v4",
    "avx512_common": "v4",
    "avx512_skx": "v4",
}

[
    alias(
        name = "has_" + feature,
        actual = ":at_least_" + level,
        visibility = ["//visibility:public"],
    )
    for feature, level in _HAS_FEATURES.items()
]
