# Constraints describing the x86-64 microarchitecture level supported by a platform.
#
# Usage:
#
#   * Defining a `platform`: specify individual features or append
#     `x86_64_level_constraints("vN")` (from `x86_64.bzl`) to the `platform`'s `constraint_value`s.
#     This helper expands to the `available` value of every CPU feature included in the requested
#     level.
#
#   * Constraining a toolchain or usage in `select()`: use one of the `:at_least_vN` config settings
#     as a `select()` key, or list a single `//cpu/x86_64/feature/<feature>:available` value in
#     `exec_compatible_with` / `target_compatible_with`.
#
# See `examples/x86_64/BUILD.bazel` for examples of these usage patterns.

load(":x86_64_private.bzl", "FEATURES_UP_TO")

[
    config_setting(
        name = "at_least_{}".format(level),
        constraint_values = [
            "//cpu/x86_64/feature/{}:available".format(feature)
            for feature in features
        ],
        visibility = ["//visibility:public"],
    )
    for level, features in FEATURES_UP_TO.items()
]
