load("//private:ordered_range_constraint_values.bzl", "ordered_range_constraint_values")

# Platforms must only specify a value for this setting if they also specify the
# //libc:glibc constraint value. This will be enforced by future versions of
# Bazel.
constraint_setting(
    name = "version",
    visibility = ["//visibility:public"],
)

GLIBC_VERSIONS = [
    "2." + str(i)
    for i in range(15, 44)
]

ordered_range_constraint_values(
    constraint_setting = ":version",
    values = GLIBC_VERSIONS,
    visibility = ["//visibility:public"],
)
