load("@rules_cc//cc:defs.bzl", "cc_binary")

# Source and prebuilt-index are both consumed by
# @platforms_contrib//private:host_detect.bzl, so make them publicly
# visible as source labels.
exports_files(
    [
        "src/detector.c",
        "prebuilts.json",
    ],
    visibility = ["//visibility:public"],
)

# Detector binaries shipped via GitHub releases. Linux-only — every other
# host platform configuration is already known at compile time, so the
# detector never has anything to report there.
#
# Build flags aim for size: -Os, no rtti/exceptions (C only, so no flags
# needed), and -s to strip. On Linux the binary is fully static against
# musl (provided by the @llvm toolchain) so it runs regardless of which
# libc the host actually uses.

_COMMON_COPTS = [
    "-std=c11",
    "-Os",
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-ffunction-sections",
    "-fdata-sections",
]

_POSIX_LINKOPTS = [
    "-Wl,--gc-sections",
    "-s",
    "-static",
]

cc_binary(
    name = "detector_linux-amd64",
    srcs = ["src/detector.c"],
    copts = _COMMON_COPTS,
    features = ["fully_static_link"],
    linkopts = _POSIX_LINKOPTS,
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

cc_binary(
    name = "detector_linux-arm64",
    srcs = ["src/detector.c"],
    copts = _COMMON_COPTS,
    features = ["fully_static_link"],
    linkopts = _POSIX_LINKOPTS,
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)
