load("//private:compat_constraint_setting.bzl", "compat_constraint_setting")

compat_constraint_setting(
    name = "sse_setting",
    default_constraint_value = ":available",
    refines_constraint_value = "@platforms//cpu:x86_64",
)

constraint_value(
    name = "available",
    constraint_setting = ":sse_setting",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "not_available",
    constraint_setting = ":sse_setting",
    visibility = ["//visibility:public"],
)
