package(default_visibility = ["//visibility:public"])

# Microarchitecture level for arm targets, corresponding to GOARM.
# See https://go.dev/doc/install/source#environment
# TODO: add refines_constraint_value = "@platforms//cpu:arm" once
# bazelbuild/bazel#28877 lands.
constraint_setting(name = "arm")

constraint_value(
    name = "5",
    constraint_setting = ":arm",
)

constraint_value(
    name = "6",
    constraint_setting = ":arm",
)

constraint_value(
    name = "7",
    constraint_setting = ":arm",
)
