package(default_visibility = ["//visibility:public"])

# Floating point implementation for mips/mipsle targets, corresponding to GOMIPS.
# Applies to both big-endian (mips) and little-endian (mipsle) variants.
# See https://go.dev/doc/install/source#environment
# TODO: add refines_constraint_value = "@platforms//cpu:mips32" once
# bazelbuild/bazel#28877 lands.
constraint_setting(name = "mips")

constraint_value(
    name = "hardfloat",
    constraint_setting = ":mips",
)

constraint_value(
    name = "softfloat",
    constraint_setting = ":mips",
)
