load("//private:compat_constraint_setting.bzl", "compat_constraint_setting")

compat_constraint_setting(
    name = "popcnt_setting",
    default_constraint_value = ":not_available",
    refines_constraint_value = "@platforms//cpu:x86_64",
)

constraint_value(
    name = "available",
    constraint_setting = ":popcnt_setting",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "not_available",
    constraint_setting = ":popcnt_setting",
    visibility = ["//visibility:public"],
)
